--- a/services.html
+++ b/services.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+
 	<!--navbar-->
 	<header class="header">
 		<nav class="menu navbar navbar-expand-lg  ">
@@ -46,57 +47,24 @@
 	</header>
 	<!--navbar end-->
 
-	<!-- hero header -->
-	<section class="hero set-bg" data-setbg="img/header.jpg">
+	<!--hero header-->
+	<section class="service set-bg" data-setbg="img/service-header.jpg">
 
-		<div class="hero-overlay">
-			<div class="container d-flex justify-content-end">
-				<div class="hero-content d-flex flex-column align-items-end ">
-					<h1>welt<span class="grey">auto</span></h1>
-					<div class="separator"></div>
-					<h6> Garage automobile réparation et entretien. <br>Composé d'un personnel qualifié et d'outils de
-						qualité. </h6>
-					<a href="tel:+33610171392" class="wa-btn"> <i class="fas fa-phone-alt"></i> 06 10 17 13 92</a>
-
-				</div>
+		<div class="page-overlay">
+			<div class="container page-content d-flex flex-column align-items-center justify-content-center">
+				<h1> Services </h1>
+				<div class="separator"></div>
 			</div>
 		</div>
 	</section>
-	<!--hero header end -->
+	<!--hero header end-->
 
-	<!--presentation section-->
-	<section class="presentation">
-		<div class="container">
-			<p>
-				Le garage Weltauto situé à Bobigny est votre interlocuteur de confiance pour la prise en charge de votre
-				véhicule. Nous sommes équipés des dernières technologies de diagnostic et de techniciens compétents.
-
-				<p>
-					Nous intervenons sur toutes les marques et sur tous les types de véhicules.
-					(citadine, berline...)
-				</p>
-		</div>
-	</section>
-
-	<!--presentation section end-->
 
 	<!--feature section-->
-	<section class="feature-section">
-		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-			<path fill="#222222" fill-opacity="1"
-				d="M0,288L48,261.3C96,235,192,181,288,149.3C384,117,480,107,576,122.7C672,139,768,181,864,208C960,235,1056,245,1152,234.7C1248,224,1344,192,1392,176L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
-			</path>
-		</svg>
+	<section class="feature-section feature-section-service">
 
 		<div class="container">
-			<div class="row justify-content-md-center">
-				<div class="col-lg-12">
-					<div class="section-title text-center">
-						<h2>Nos services</h2>
 
-					</div>
-				</div>
-			</div>
 			<div class="row">
 				<div class="col-sm-4 service">
 					<div class="feature">
@@ -129,42 +97,69 @@
 					</div>
 				</div>
 
-				<a href="services.html" class="wa-btn features-btn  ml-auto">En savoir plus</a>
+
+				<div class="row">
+					<div class="col-sm-4 service">
+						<div class="feature">
+							<div class="icon-box">
+								<i class="flaticon-jerrycan"></i>
+							</div>
+							<h4>Entretien vidange
+							</h4>
+							<p>Donec nec sapien in urna fermentum ornare. Morbi vel ultrices leo. Sed eu turpis eu arcu
+								vehicula fringilla ut vitae orci. </p>
+						</div>
+					</div>
+					<div class="col-sm-4 service">
+						<div class="feature">
+							<div class="icon-box">
+								<i class="flaticon-tools"></i>
+							</div>
+							<h4>Mécanique</h4>
+							<p>Donec nec sapien in urna fermentum ornare. Morbi vel ultrices leo. Sed eu turpis eu arcu
+								vehicula fringilla ut vitae orci. </p>
+						</div>
+					</div>
+					<div class="col-sm-4 service">
+						<div class="feature">
+							<div class="icon-box">
+								<i class="flaticon-car"></i>
+							</div>
+							<h4>Diagnostic</h4>
+							<p>Donec nec sapien in urna fermentum ornare. Morbi vel ultrices leo. Sed eu turpis eu arcu
+								vehicula fringilla ut vitae orci. </p>
+						</div>
+					</div>
 
 
 
+
+
+				</div>
 			</div>
-		</div>
 	</section>
-	<!--feature section-->
+	<!--feature section end-->
 
-
-	<!--car occasion section-->
-	<section class="carocas">
+	<!--hourly rate section-->
+	<section class="tarif-horaire">
 		<div class="container">
-
-			<div class="row justify-content-md-center justify-content-sm-center">
-				<div class="col-lg-6 col-md-10 float-lg-left">
-					<img src="img/key.jpg" class="" alt="">
-				</div>
-				<div class="col-lg-6 carocas-content">
+			<div class="row">
+				<div class="col-lg-6 d-flex justify-content-center">
 					<div class="section-title">
-						<h2>Nos voitures à vendre</h2>
+						<h2 class="th">Tarifs horaires de réparations </h2>
 					</div>
-					<div class=" col-lg-9 carocas-content">
-						<h6>
-							Véhicules d'occasion, toute marque.
-						</h6>
-					</div>
-					<a href="occasion.html" class="wa-btn">En savoir plus</a>
 				</div>
-
-
+				<div class="col-lg-6 d-flex flex-column align-items-center justify-content-center">
+					<div class="tarif-text">
+						<p>Donec nec sapien in urna fermentum ornare. </p>
+						<p>Donec nec sapien in urna fermentum ornare. </p>
+						<p>Donec nec sapien in urna fermentum ornare. </p>
+					</div>
+				</div>
 			</div>
-
 		</div>
 	</section>
-		<!--car occasion section end-->
+	<!--hourly rate section end-->
 
 	<!--footer section-->
 	<footer class="footer-section set-bg" data-setbg="img/header.jpg">
@@ -203,9 +198,6 @@
 			</div>
 	</footer>
 	<!--footer section end-->
-
-
-
 
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
