--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<div class="icon-box">
 							<i class="flaticon-spray"></i>
 						</div>
-						<h4>Carosserie / Peinture</h4>
+						<h4>Carrosserie / Peinture</h4>
 						<p>Donec nec sapien in urna fermentum ornare. Morbi vel ultrices leo. Sed eu turpis eu arcu
 							vehicula fringilla ut vitae orci. </p>
 					</div>
